transparent background when collapsed fixed

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a {
     font-size: 1rem;
 
     display: grid;
-    grid-template-rows: repeat(3fr);
+    grid-template-rows: auto 1fr auto;
     grid-template-columns: 1fr;
     grid-template-areas: 
     "navbar"
@@ -49,11 +49,11 @@ a {
 /*------navbar-------*/
 
 .navbar {
-    min-height: 2.1rem;
     padding: 1rem;
     display: flex;
     position: relative;
     justify-content: space-between;
+    align-items: center;
     
 }
 
@@ -73,6 +73,16 @@ a {
 
 .navbar__menu:hover {
     cursor: pointer;
+}
+
+.navbar__collapse {
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    width: 0;
+    top: 0;
+    right: 0;
+    overflow-x: hidden;
 }
 
 .navbar-links {
@@ -206,7 +216,8 @@ a {
 /*-------main-content-------*/
 
 .main {
-
+    position: relative;
+    z-index: 0;
 }
 
 .main-image {
@@ -214,7 +225,9 @@ a {
 }
 
 .main-image__hero {
-
+    content: url("/images/image-hero-mobile.png");
+    max-width: 100%;
+    
 }
 
 .main-content {
